adding security (encrypt-decrypt) class

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
         android:id="@+id/btnBarcode"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="#5C8A8A"
+        android:background="#76a3a3"
         android:gravity="left"
         android:padding="6dp"
         android:text="@string/txtMainTitle"
@@ -31,7 +31,7 @@
               android:id="@+id/txtInfo"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
-              android:background="#5C8A8A"
+              android:background="#76a3a3"
               android:gravity="left"
               android:padding="6dp"
               android:text="@string/textInfo"
