--- a/app/src/main/res/layout/activity_input_forms.xml
+++ b/app/src/main/res/layout/activity_input_forms.xml
@@ -4,14 +4,18 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".StDetInputActivity"
     android:id="@+id/txt_Header"
+    android:gravity="center_vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TableLayout
         android:id="@+id/tbl_layout"
+        android:background="#e3eded"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
+        android:layout_marginLeft = "10dp"
+        android:layout_marginRight = "10dp"
         android:layout_marginTop="8dp"
 
         android:layout_marginEnd="8dp"
@@ -30,17 +34,18 @@
                 android:id="@+id/lbl_COL_ID"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:backgroundTint="@color/cardview_shadow_start_color"
                 android:text="@string/data_collector_id"
+                android:textStyle="bold"
                 android:textSize="16sp" />
 
             <Spinner
                 android:id="@+id/spin_COL_ID"
-                android:layout_width="147dp"
+                android:layout_width="107dp"
                 android:layout_height="40dp"
+                android:background="@drawable/custom_spinner_background"
+                android:gravity="center_vertical"
                 android:spinnerMode="dropdown"
-                tools:ignore="DuplicateSpeakableTextCheck" />
+                tools:ignore="DuplicateSpeakableTextCheck,TouchTargetSizeCheck" />
 
         </TableRow>
 
@@ -51,7 +56,9 @@
 
             <TextView
                 android:id="@+id/lbl_Loc_Id"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
+                android:gravity="center_vertical"
                 android:layout_height="match_parent"
                 android:text="@string/loc_id"
                 android:textSize="16sp" />
@@ -62,7 +69,8 @@
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:background="@drawable/custom_spinner_background"
-                android:spinnerMode="dialog" />
+                android:spinnerMode="dialog"
+                tools:ignore="TouchTargetSizeCheck" />
 
         </TableRow>
 
@@ -73,8 +81,10 @@
 
             <TextView
                 android:id="@+id/txt_Loc_desc"
+                android:background="@drawable/border"
                 android:layout_height="40dp"
                 android:layout_weight="4"
+                android:gravity="center"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 android:textSize="14sp" />
         </TableRow>
@@ -88,9 +98,12 @@
 
             <TextView
                 android:id="@+id/lbl_FacOper"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
+                android:elegantTextHeight="true"
+                android:gravity="center_vertical"
                 android:text="@string/oper_status" />
 
             <Spinner
@@ -98,7 +111,8 @@
                 android:layout_width="50dp"
                 android:layout_height="40dp"
                 android:background="@drawable/custom_spinner_background"
-                android:spinnerMode="dropdown" />
+                android:spinnerMode="dropdown"
+                tools:ignore="TouchTargetSizeCheck" />
         </TableRow>
 
         <TableRow
@@ -108,7 +122,9 @@
 
             <TextView
                 android:id="@+id/lbl_EqStatus"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
+                android:gravity="center_vertical"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/equip_status" />
@@ -118,7 +134,8 @@
                 android:layout_width="125dp"
                 android:layout_height="40dp"
                 android:background="@drawable/custom_spinner_background"
-                android:spinnerMode="dropdown" />
+                android:spinnerMode="dropdown"
+                tools:ignore="TouchTargetSizeCheck" />
 
 
         </TableRow>
@@ -126,11 +143,14 @@
         <TableRow
             android:id="@+id/row7"
             android:layout_width="match_parent"
+            android:gravity="center_vertical"
             android:layout_height="36dp">
 
             <TextView
                 android:id="@+id/lbl_elev_code"
+                android:textStyle="bold"
                 android:layout_width="wrap_content"
+                android:gravity="center_vertical"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
                 android:text="@string/elev_code" />
@@ -138,24 +158,28 @@
             <TextView
                 android:id="@+id/lbl_elev_code_value"
                 android:layout_width="wrap_content"
+                android:gravity="center_vertical"
                 android:layout_height="40dp"
                 android:text="@string/na" />
         </TableRow>
 
         <TableRow
             android:id="@+id/row8"
+            android:gravity="center_vertical"
             android:layout_width="match_parent"
             android:layout_height="48dp">
 
 
             <TextView
                 android:id="@+id/lbl_elev_code_value2"
+                android:gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/na1" />
 
             <TextView
                 android:id="@+id/lbl_depth"
+                android:gravity="center_vertical"
                 android:layout_width="50dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1" />
@@ -169,6 +193,8 @@
 
             <TextView
                 android:id="@+id/lbl_Reading"
+                android:textStyle="bold"
+                android:gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/reading" />
@@ -178,16 +204,21 @@
                 android:layout_width="50dp"
                 android:layout_weight="1"
                 android:autofillHints=""
-                android:ems="10"
-                android:inputType="text"
+                android:textStyle="bold"
+                android:background="@drawable/border"
+                android:inputType="number"
                 android:minHeight="36dp"
                 android:selectAllOnFocus="true"
-                android:text="@string/_0_0" />
+                android:text="@string/_0_0"
+                tools:ignore="TouchTargetSizeCheck" />
 
             <Spinner
                 android:id="@+id/spin_Unit"
+                android:background="@drawable/custom_spinner_background"
                 android:layout_width="114dp"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:gravity="center_vertical"
+                tools:ignore="TouchTargetSizeCheck" />
         </TableRow>
 
         <TableRow
@@ -197,16 +228,20 @@
 
             <TextView
                 android:id="@+id/lbl_Comment"
+                android:textStyle="bold"
+                android:gravity="center_vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:text="@string/comment1" />
 
             <EditText
                 android:id="@+id/txt_Comment"
+                android:layout_width="274dp"
                 android:layout_height="48dp"
-                android:layout_weight="1"
                 android:autofillHints=""
+                android:background="@drawable/border"
                 android:ems="10"
+                android:gravity="center_vertical"
                 android:inputType="text"
                 android:text="@string/comment" />
         </TableRow>
@@ -219,6 +254,7 @@
             <Button
                 android:id="@+id/btn_Manual"
                 style="@style/Widget.AppCompat.Button"
+                android:textStyle="bold"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:layout_weight="1"
@@ -227,6 +263,7 @@
             <Button
                 android:id="@+id/btn_save"
                 style="@style/Widget.AppCompat.Button"
+                android:textStyle="bold"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:layout_weight="1"
@@ -235,6 +272,7 @@
             <Button
                 android:id="@+id/btn_clear"
                 style="@style/Widget.AppCompat.Button"
+                android:textStyle="bold"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:layout_weight="1"
@@ -243,6 +281,7 @@
             <Button
                 android:id="@+id/btn_done"
                 style="@style/Widget.AppCompat.Button"
+                android:textStyle="bold"
                 android:layout_width="0dp"
                 android:layout_height="48dp"
                 android:layout_weight="1"
