--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -21,5 +21,11 @@
         android:orderInCategory="100"
         android:title="@string/menu_SelectScanner"
         app:showAsAction="never" />
+    <item
+         android:id="@+id/menu_LoginInfo"
+        android:orderInCategory="100"
+        android:title="@string/menu_LoginInfo"
+        app:showAsAction="never" />
+
 
 </menu>
