--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -4,12 +4,12 @@
     <item
         android:id="@+id/menu_DownloadData"
         android:orderInCategory="100"
-        android:title="@string/menu_DownloadData"
+        android:title="@string/btnDownloadData"
         app:showAsAction="never" />
     <item
         android:id="@+id/menu_UploadLookupData"
         android:orderInCategory="100"
-        android:title="@string/menu_UploadLookupData"
+        android:title="@string/btnUploadXMLtoDB"
         app:showAsAction="never" />
     <item
         android:id="@+id/menu_CheckScanner"
@@ -24,7 +24,7 @@
     <item
          android:id="@+id/menu_LoginInfo"
         android:orderInCategory="100"
-        android:title="@string/menu_LoginInfo"
+        android:title="@string/btnCheckConnectivity"
         app:showAsAction="never" />
 
 
