--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -18,42 +18,44 @@
     </TextView>
 
 
+    <LinearLayout
+        android:layout_width="412dp"
+        android:layout_height="683dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="37dp"
+        android:orientation="vertical">
 
-      <LinearLayout
-          android:layout_width="match_parent"
-          android:layout_height="match_parent"
-          android:layout_alignParentLeft="true"
-          android:layout_alignParentTop="true"
-          android:layout_marginTop="40dp"
-          android:orientation="vertical" >
+        <TextView
+            android:id="@+id/txtInfo"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:background="#76a3a3"
+            android:gravity="left"
+            android:padding="6dp"
+            android:text="@string/textInfo"
+            android:textColor="#000000"
+            android:textSize="13sp">
 
-          <TextView
-              android:id="@+id/txtInfo"
-              android:layout_width="fill_parent"
-              android:layout_height="wrap_content"
-              android:background="#76a3a3"
-              android:gravity="left"
-              android:padding="6dp"
-              android:text="@string/textInfo"
-              android:textColor="#000000"
-              android:textSize="13sp">
+        </TextView>
 
-          </TextView>
+        <Button
+            android:id="@+id/btnInputForms"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            android:text="@string/btnInputForms" />
 
-          <Button
-              android:id="@+id/btnInputForms"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginTop="22dp"
-              android:text="@string/btnInputForms" />
+        <Button
+            android:id="@+id/buttonUploadReadings"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="22dp"
+            android:text="@string/btnUploadReadings" />
 
-          <Button
-              android:id="@+id/buttonUploadReadings"
-              android:layout_width="match_parent"
-              android:layout_height="wrap_content"
-              android:layout_marginTop="22dp"
-              android:text="@string/btnUploadReadings" />
-<!--
+
+        <!--
           <Button
               android:id="@+id/buttonClientBarcode"
               android:layout_width="match_parent"
@@ -82,6 +84,37 @@
               android:layout_marginTop="22dp"
               android:text="@string/btnUploadXMLtoDB"/>
 -->
-      </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:orientation="vertical">
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            style="?android:attr/progressBarStyle"
+            android:max = "100"
+            android:min = "1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/txtAppInfo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_gravity="bottom"
+            android:background="#83acac"
+            android:fontFamily="sans-serif-black"
+            android:foregroundTintMode="add"
+            android:gravity="center_vertical|center_horizontal"
+            android:padding="8dip"
+            android:text="TextView"
+            android:textColor="#4A148C" />
+
+    </LinearLayout>
 
 </RelativeLayout>
