--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -6,11 +6,13 @@
         android:orderInCategory="100"
         android:title="@string/btnDownloadData"
         app:showAsAction="never" />
+    <!--
     <item
         android:id="@+id/menu_UploadLookupData"
         android:orderInCategory="100"
         android:title="@string/btnUploadXMLtoDB"
         app:showAsAction="never" />
+        -->
     <item
         android:id="@+id/menu_CheckScanner"
         android:orderInCategory="100"
@@ -26,6 +28,12 @@
         android:orderInCategory="100"
         android:title="@string/btnCheckConnectivity"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_workWithSDCard"
+        android:orderInCategory="100"
+        android:title="@string/copy_data_to_sd_card"
+        app:showAsAction="never" />
+
 
 
 </menu>
