--- a/app/src/main/res/layout/activity_edit_forms.xml
+++ b/app/src/main/res/layout/activity_edit_forms.xml
@@ -10,16 +10,14 @@
 
     <TableLayout
         android:id="@+id/tbl_layout"
-        android:background="#e3eded"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginStart="8dp"
-        android:layout_marginLeft = "10dp"
-        android:layout_marginRight = "10dp"
         android:layout_marginTop="8dp"
-
         android:layout_marginEnd="8dp"
+
         android:layout_marginBottom="8dp"
+        android:background="@color/lightblue"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,34 +26,36 @@
         <TableRow
             android:id="@+id/row2"
             android:layout_width="match_parent"
-            android:minHeight="40dp"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:minHeight="40dp">
 
             <TextView
                 android:id="@+id/lbl_COL_ID"
-                android:layout_width="180dp"
+                android:layout_width="148dp"
                 android:layout_height="match_parent"
+                android:gravity="center_vertical"
                 android:text="@string/data_collector_id"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/spin_COL_ID"
-                android:layout_width="match_parent"
-                android:layout_height="47dp"
-                android:background="@drawable/custom_spinner_background"
+                android:id="@+id/txt_COL_ID"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:scrollbarStyle="insideInset"
-                android:spinnerMode="dropdown"
-                tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />
+                android:textSize="14sp"
+                android:textStyle="bold"
+                />
 
         </TableRow>
 
         <TableRow
             android:id="@+id/row3"
             android:layout_width="match_parent"
-            android:minHeight="40dp"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:minHeight="40dp">
 
             <TextView
                 android:id="@+id/lbl_Loc_Id"
@@ -68,39 +68,48 @@
                 android:textStyle="bold" />
 
             <TextView
-                android:id="@+id/spin_Loc_id"
+                android:id="@+id/txt_Loc_id"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:background="@drawable/custom_spinner_background"
-                android:spinnerMode="dialog"
-                tools:ignore="TouchTargetSizeCheck" />
+                android:gravity="center_vertical"
+                android:textSize="16sp"
+                android:textStyle="bold"  />
 
         </TableRow>
 
         <TableRow
             android:id="@+id/row4"
             android:layout_width="match_parent"
-            android:minHeight="40dp"
-            android:layout_height="60dp">
+            android:layout_height="60dp"
+            android:minHeight="40dp">
 
             <TextView
-                android:id="@+id/txt_Loc_desc"
-                android:layout_width="match_parent"
+                android:id="@+id/lbl_date"
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:background="@drawable/border"
-                android:gravity="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-                android:textSize="14sp" />
+                android:layout_weight="0"
+                android:gravity="center_vertical"
+                android:text="Date Time"
+                android:textSize="16sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/txt_date"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:gravity="center_vertical"
+                android:textSize="16sp"
+                android:textStyle="bold"  />
         </TableRow>
 
 
         <TableRow
             android:id="@+id/row5"
-            android:minHeight="40dp"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:minHeight="40dp">
 
 
             <TextView
@@ -125,18 +134,18 @@
 
         <TableRow
             android:id="@+id/row6"
-            android:minHeight="40dp"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:minHeight="40dp">
 
             <TextView
                 android:id="@+id/lbl_EqStatus"
-                android:textStyle="bold"
                 android:layout_width="wrap_content"
-                android:gravity="center_vertical"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="@string/equip_status" />
+                android:gravity="center_vertical"
+                android:text="@string/equip_status"
+                android:textStyle="bold" />
 
             <Spinner
                 android:id="@+id/spin_Eq_oper"
@@ -152,18 +161,18 @@
         <TableRow
             android:id="@+id/row7"
             android:layout_width="match_parent"
-            android:minHeight="40dp"
+            android:layout_height="50dp"
             android:gravity="center_vertical"
-            android:layout_height="50dp">
+            android:minHeight="40dp">
 
             <TextView
                 android:id="@+id/lbl_elev_code"
-                android:textStyle="bold"
                 android:layout_width="wrap_content"
-                android:gravity="center_vertical"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="@string/elev_code" />
+                android:gravity="center_vertical"
+                android:text="@string/elev_code"
+                android:textStyle="bold" />
 
             <Spinner
                 android:id="@+id/spin_elev_code"
@@ -176,10 +185,10 @@
 
         <TableRow
             android:id="@+id/row8"
-            android:minHeight="40dp"
-            android:gravity="center_vertical"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:gravity="center_vertical"
+            android:minHeight="40dp">
 
 
             <TextView
@@ -195,8 +204,8 @@
             <EditText
                 android:id="@+id/text_depth"
                 android:layout_width="50dp"
-                android:layout_marginStart="3dp"
                 android:layout_height="match_parent"
+                android:layout_marginStart="3dp"
                 android:layout_weight="1"
                 android:autofillHints=""
                 android:background="@drawable/border"
@@ -210,9 +219,9 @@
 
         <TableRow
             android:id="@+id/row9"
-            android:minHeight="40dp"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:minHeight="40dp">
 
 
             <TextView
@@ -232,30 +241,30 @@
                 android:layout_weight="1"
                 android:autofillHints=""
                 android:background="@drawable/border"
-                android:textColorHighlight="#7cff88"
                 android:digits="0123456789.,"
+                android:imeOptions="actionSend"
                 android:inputType="text"
                 android:minHeight="36dp"
-                android:imeOptions="actionSend"
                 android:text="@string/_0_0"
+                android:textColorHighlight="#7cff88"
                 android:textStyle="bold"
                 android:windowSoftInputMode="stateHidden|adjustPan"
                 tools:ignore="TouchTargetSizeCheck" />
 
             <Spinner
                 android:id="@+id/spin_Unit"
-                android:background="@drawable/custom_spinner_background"
                 android:layout_width="114dp"
                 android:layout_height="match_parent"
+                android:background="@drawable/custom_spinner_background"
                 android:gravity="center_vertical"
                 tools:ignore="TouchTargetSizeCheck" />
         </TableRow>
 
         <TableRow
             android:id="@+id/row10"
-            android:minHeight="65dp"
             android:layout_width="match_parent"
-            android:layout_height="70dp">
+            android:layout_height="70dp"
+            android:minHeight="65dp">
 
 
             <TextView
@@ -273,57 +282,41 @@
                 android:layout_width="250dp"
                 android:layout_height="match_parent"
                 android:layout_marginStart="2dp"
+                android:autofillHints=""
                 android:background="@drawable/border"
                 android:ems="10"
                 android:gravity="center_vertical"
                 android:inputType="textMultiLine"
-                android:windowSoftInputMode="stateHidden|adjustPan"
                 android:text="@string/comment1"
-                android:autofillHints="" />
+                android:windowSoftInputMode="stateHidden|adjustPan" />
         </TableRow>
 
         <TableRow
             android:id="@+id/rowButtons"
-            android:minHeight="50dp"
             android:layout_width="match_parent"
-            android:layout_height="50dp">
+            android:layout_height="50dp"
+            android:minHeight="50dp">
+
 
             <Button
-                android:id="@+id/btn_delete"
+                android:id="@+id/btn_update"
                 style="@style/Widget.AppCompat.Button"
-                android:textStyle="bold"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="@string/save" />
+                android:text="@string/Update"
+                android:textStyle="bold" />
 
             <Button
-                android:id="@+id/btn_edit"
+                android:id="@+id/btn_cancel"
                 style="@style/Widget.AppCompat.Button"
-                android:textStyle="bold"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:text="@string/clear" />
-
-            <Button
-                android:id="@+id/btn_done2"
-                style="@style/Widget.AppCompat.Button"
-                android:textStyle="bold"
-                android:layout_width="0dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:text="@string/done" />
+                android:text="@string/Cancel"
+                android:textStyle="bold" />
         </TableRow>
-        <ListView
-            android:id="@+id/listViewBarcodeData"
-            android:layout_width="match_parent"
-            android:layout_height="10dp"
-            android:textSize="25sp"
-            android:layout_below="@+id/textView2"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentStart="true"
-            android:layout_marginTop="10dp"></ListView>
+
 
     </TableLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
