--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,8 +19,25 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
-    <style name="AlertDialogTheme" parent="Theme.MaterialComponents.Light.Dialog.Alert">
-        <item name="colorPrimary">#4CAF50</item>
+    <style name="AlertDialogTheme" parent="android:style/Theme.Holo.Light.Dialog">
+
     </style>
+    <style name="AlertDialogWarning" parent="android:style/Theme.Holo.Light.Dialog">
+        <item name="android:textColor">#29299c</item>
+        <item name="android:textColorPrimary">#990000</item>
+        <item name="android:colorAccent">#20c71a</item>
+
+    </style>
+    <style name="AlertDialogError" parent="android:style/Theme.Holo.Light.Dialog">
+        <item name="android:textColor">#f20f29</item>
+        <item name="android:textColorPrimary">#29299c</item>
+        <item name="android:colorAccent">#20c71a</item>
+        <item name="android:buttonBarButtonStyle">@style/RedButtonStyle</item>
+    </style>
+    <style name="RedButtonStyle" parent="android:style/Theme.Holo.Light.Dialog">
+        <item name="android:textColor">#f20f29</item>
+        <item name="android:background">#F0F2F3</item>
+    </style>
+
 
 </resources>
