--- a/app/src/main/res/menu/activity_main.xml
+++ b/app/src/main/res/menu/activity_main.xml
@@ -6,25 +6,12 @@
         android:orderInCategory="100"
         android:title="@string/btnDownloadData"
         app:showAsAction="never" />
-    <!--
-    <item
-        android:id="@+id/menu_UploadLookupData"
-        android:orderInCategory="100"
-        android:title="@string/btnUploadXMLtoDB"
-        app:showAsAction="never" />
-        -->
     <item
         android:id="@+id/menu_CheckScanner"
         android:orderInCategory="100"
         android:title="@string/menu_CheckScanner"
         app:showAsAction="never" />
-    <!--
-   <item
-       android:id="@+id/menu_SelectScanner"
-       android:orderInCategory="100"
-       android:title="@string/menu_SelectScanner"
-       app:showAsAction="never" />
-       -->
+
    <item
         android:id="@+id/menu_LoginInfo"
        android:orderInCategory="100"
@@ -35,6 +22,11 @@
        android:orderInCategory="100"
        android:title="@string/copy_data_to_sd_card"
        app:showAsAction="never" />
+    <item
+        android:id="@+id/menu_workUploadDB"
+        android:orderInCategory="100"
+        android:title="Upload Inner Database to the Server"
+        app:showAsAction="never" />
 
 
 
